sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:12: error: type mismatch;
 found   : Int(0)
 required: Boolean
      if (n = 0) {
              ^AlgBubbleSort3:12: error: type mismatch;
 found   : Unit
 required: Boolean
      if (n = 0) {
            ^